--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://kikelong.github.io/goit-markup-hw-01/">WebStudio</a>
         <ul>
           <li>
-            <a href="">Estudio</a>
+            <a href="">Estudio.</a>
           </li>
           <li>
             <a href="">Portafolio</a>
